# thalassa-server

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py
requirements/: requirements-dev.txt  requirements.txt
thalassa_server/: ui.py
